project with Tailwind

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
 
 
 .logo {
-  color: #9d94ff;
+  color: #5d55bb;
   font-size: 30px;
   font-family: 'Permanent Marker';
   margin-right: 20px;
@@ -33,3 +33,6 @@
   height: 100vh;
 }
 
+.container{
+  padding: 20px 20%;
+}
