--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none !important; 
+  text-decoration: none !important;
 }
-
 
 .logo {
   color: #5d55bb;
@@ -15,24 +14,27 @@
   margin-right: 20px;
 }
 
-
-.icon-style{
+.icon-style {
   cursor: pointer;
   transition: all 0.2s ease;
   font-size: 24px;
   color: #4e43cf;
 
-
-
-  &:hover{
+  &:hover {
     opacity: 0.5;
   }
 }
 
-.vh-100{
+.vh-100 {
   height: 100vh;
 }
 
-.container{
+.container {
   padding: 20px 20%;
+}
+
+.btn {
+  &:hover {
+    opacity: 0.5;
+  }
 }
